# phonebook

./: CMakeLists.txt  README.md  contact-main.c  insert.c
b/: .ninja_deps  .ninja_log  CMakeCache.txt  My-contact.glade  My-contact.glade~  build.ninja  cmake_install.cmake  contact  insert  test.db
